--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -7,19 +7,12 @@ on:
     branches: [master]
 
 jobs:
-  build:
+  deploy:
     runs-on: self-hosted
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - run: npm i
-      - run: npm run build --if-present
+    - name: Checkout
+      uses: actions/checkout@v3
+      
+    - name: Start containers
+      run: docker-compose -f "docker-compose-prod.yml" up -d --build
