--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,7 @@
-FROM node:alpine
+FROM node:18-alpine
 WORKDIR /app
 COPY package.json .
+RUN npm config set legacy-peer-deps true
 RUN npm install
 COPY . .
 EXPOSE 3000
