--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,13 +2,12 @@ name: CI/CD
 
 on:
   push:
-    branches: [ dev ]
+    branches: [master]
   pull_request:
-    branches: [ dev ]
+    branches: [master]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -25,7 +24,18 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
+      run: npm config set legacy-peer-deps true
       run: npm install
 
     - name: Run the tests
       run: npm test
+
+  deploy:
+    runs-on: self-hosted
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      
+    - name: Start containers
+      run: docker compose -f "docker-compose-prod.yml" up -d --build
