--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -38,4 +38,4 @@ jobs:
       uses: actions/checkout@v3
       
     - name: Start containers
-      run: docker compose -f "docker-compose-prod.yml" up -d --build
+      run: docker compose -f "docker-compose.yml" up -d --build
