--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,30 +7,28 @@ on:
     branches: [master]
 
 jobs:
-  test:
+  CI:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Node.js ${{ matrix.node-version }}
+    - name: Set up Node.js
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18
 
     - name: Install dependencies
-      run: npm config set legacy-peer-deps true
-      run: npm install
+      run: |
+        npm config set legacy-peer-deps true
+        npm install
 
     - name: Run the tests
       run: npm test
 
-  deploy:
+  CD:
+    needs: CI
     runs-on: self-hosted
 
     steps:
