--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,9 +1,8 @@
 version: "3.8"
 
 services:
-<<<<<<< HEAD
   frontend:
-    image: tracer-frontend-dev
+    image: letswatch-frontend-dev
     container_name: tracer-frontend-dev
     build: 
       context: .
@@ -14,15 +13,3 @@ services:
       - "3000:3000"
     volumes:
       - ./src:/app/src
-=======
-  react-app:
-    container_name: front-end-dev-container
-    image: front-end-dev-image
-    build: 
-      context: .
-      dockerfile: Dockerfile.dev
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./src:/app/src
->>>>>>> master
