Update nginx config file and change its port on docker compose files

--- a/config/nginx/nginx.conf
+++ b/config/nginx/nginx.conf
@@ -6,9 +6,11 @@ events {
 
 http {
   index     index.html;
+  include   /etc/nginx/mime.types;
 
   server {
-    listen        8080;
+    listen       80;
+    server_name  letswatch.ir www.letswatch.ir;
     root          /usr/share/nginx/html;
     try_files     $uri $uri/ /index.html;
   }
